center images vertically, fix nav overflow

--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -4,28 +4,31 @@
 
 .wrapper {
   position: relative;
+  width:    100%;
   height:   480px;
   margin:   0;
   padding:  0;
 }
 
-.image {
+.figure {
   position:   absolute;
-  top:        0;
+  top:        50%;
   right:      0;
   left:       0;
+  transform:  translate(0%, -50%);
   max-width:  100%;
-  max-height: 460px;
-  margin:     auto;
+  max-height: 100%;
+  margin:     0;
+}
+
+.image {
+  max-width:  90%;
+  max-height: 400px;
+  margin:     0 auto 5px auto;
 }
 
 .caption {
-  position:    absolute;
-  right:       0;
-  bottom:      0;
-  left:        0;
-  max-width:   100%;
-  max-height:  20px;
+  width:       100%;
   text-align:  center;
   font-weight: bold;
 }
